<resources>
    <string name="app_name">Recipes</string>
    <string name="pizzas">Pizzas</string>
    <string name="burgers">Burgers</string>
    <string name="sushis">Sushis</string>
    <string name="apples">apples</string>
    <string name="users">users</string>
    <string name="settings">settings</string>
    <string name="homes">homes</string>
    <string name="home">home</string>
    <string name="go_to_detail">Go to detail</string>
    <string name="more_options">More options</string>
    <string name="image">ImageItem</string>
</resources>